--- a/css/index.css
+++ b/css/index.css
@@ -1,54 +1,41 @@
-body{
-  margin:0;
+.dropdown ul{
+  list-style:none;
+  padding:0.3rem;
 }
 
-.viewport{
-  width:99vw;
-  height:99vh;
+.dropbtn {
+    background-color: grey;
+    color: white;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
 }
-
-.bg-primary{
-  background-color:#f4f4f4;
+.dropdown {
+  float:right;
+  display:none;
 }
-
-.grid-layout-default{
-  display:grid;
-  height:100%;
-  grid-template-rows: 6em 1fr 1fr 3em;
-  grid-template-columns: 1fr 85% 1fr
+.dropdown-content {
+    display: none;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px;
 }
-
-.grid-area-navbar{
-  grid-row: 1 / 2;
-  grid-column: 1 / 4
+.dropdown-content a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    margin-top:0.5rem;
 }
-
-.grid-area-top-content{
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
+.dropdown-content a:hover{
+  background-color: grey;
 }
-
-.grid-area-bottom-content{
-  grid-row: 3 / 4;
-  grid-column: 2 / 3;
+.dropdown:hover .dropdown-content{
+  display: block;
 }
-
-.grid-area-footer{
-  grid-row: 4 / 5;
-  grid-column: 1 / 4;
+.dropdown:hover .dropbtn{
+  background-color: grey;
 }
-
-.red{
-  background-color:red;
-}
-.green{
-  background-color:green;
-}
-
-.blue{
-  background-color:blue;
-}
-
-.yellow{
-  background-color:yellow;
+.text-right{
+  text-align:right;
+  margin-right:0.5em;
 }
